# vehicle

./: README.md
01autodrive/: .gitignore  README.md  TERMINAL_EXECUTION.md  cam.py  enter_docker.sh  learn_code.py  parking.sh  perception_node.sh  start_tracher.sh
01autodrive/datas/maps/: VISIT_2  VISIT_2.json  demo4.json  demo5.json  hang  hang.json  matlab_plan_path2.json  new_demo  new_demo.json  new_demo_1  new_demo_1.json  new_demo_2  new_demo_2.json  new_demo_3.json  online_plan2.json  peng_test.json  school-1  school-1.json  school-2  school-2.json  test_2.json  test_3  test_3.json  text_1  text_1.json  visit_1  visit_1.json  wan1  wan1.json  wan2  wan2.json  wan3.json  westdoor.json  xdh-1  xdh-1.json  yu_cone1  yu_cone1.json  yu_test_u.json  yu_test_u2.json
01autodrive/demo/: qt_demo.py
01autodrive/launch/: launch_camera.py  launch_camera_lane.py  launch_camera_light.py  launch_camera_object.py  launch_camera_sign.py  launch_defaults.py  launch_global_planner.py  launch_hmi.py  launch_lidar.py  launch_lidar_object.py  launch_radar.py  launch_rviz.py  launch_tracker.py
01autodrive/maps/: VISIT_2_sites.txt  hang_sites.txt  new_demo_1_sites.txt  new_demo_2_sites.txt  new_demo_3_sites.txt  new_demo_3_trj.txt  new_demo_sites.txt  peng_test_sites.txt  peng_test_trj.txt  school-1_sites.txt  test_2_sites.txt  test_2_trj.txt  test_3_sites.txt  text_1_sites.txt  visit_1_sites.txt  wan1_sites.txt  wan2_sites.txt  wan3_sites.txt  wan3_trj.txt  westdoor_sites.txt  westdoor_trj.txt  xdh-1_sites.txt  yu_cone1_sites.txt  yu_test_2u_sites.txt  yu_test_u2_trj.txt  yu_test_u_sites.txt  yu_test_u_trj.txt
01autodrive/src/camera_detect/: package.xml  setup.cfg  setup.py  test_cam.py
01autodrive/src/camera_ori/: package.xml  setup.cfg  setup.py
01autodrive/src/can/: can-get.py
01autodrive/src/car_control/: package.xml  setup.py
01autodrive/src/car_decision/: package.xml  setup.cfg  setup.py
01autodrive/src/car_interfaces/: CMakeLists.txt  msg.md
01autodrive/src/car_ori/: package.xml  setup.cfg  setup.py
01autodrive/src/fusion/: package.xml  setup.cfg  setup.py
01autodrive/src/global_path_planning/: package.xml  setup.cfg  setup.py
01autodrive/src/gps/: package.xml  setup.py
01autodrive/src/hmi/: package.xml  setup.cfg  setup.py
01autodrive/src/imu/: package.xml  setup.py
01autodrive/src/lane_recognition/: package.xml  setup.cfg  (+1 more)
01autodrive/src/position/: package.xml  setup.py
01autodrive/src/position/position/: position.py
01autodrive/usr_files/: install.md  requirements.txt
02mapping/catkin_ws/src/FAST_LIO/: CMakeLists.txt  package.xml
02mapping/catkin_ws/src/FAST_LIO/config/: mid360.yaml  robosense_helios.yaml  velodyne.yaml
02mapping/catkin_ws/src/FAST_LIO/include/: Scancontext.h  common_lib.h
02mapping/catkin_ws/src/FAST_LIO/launch/: mapping_avia.launch  mapping_horizon.launch  mapping_marsim.launch  mapping_mid360.launch  mapping_ouster64.launch  mapping_robosense.launch  mapping_velodyne.launch
02mapping/catkin_ws/src/FAST_LIO/msg/: IrisDescriptor.msg  LoopClosure.msg
02mapping/catkin_ws/src/FAST_LIO/rviz_cfg/: loam_livox.rviz
02mapping/catkin_ws/src/FAST_LIO/scripts/: compression_env.py  td3_agent.py  train_ppo.py
02mapping/catkin_ws/src/FAST_LIO/src/: IMU_Processing.hpp  laserMapping.cpp  loop.cpp  pcl_dynamic_compress_node.cpp  preprocess.cpp  preprocess.h
02mapping/catkin_ws/src/FAST_LIO/tests/: test_livox_decoupling.py  test_robosense_helios_entrypoints.py  test_robosense_timestamp_field_support.py  test_runtime_log_gating.py  test_unused_cv_bridge_include.py  test_unused_eigen_conversions_dependency.py
02mapping/catkin_ws/src/data_sender/: CMakeLists.txt  package.xml
02mapping/catkin_ws/src/data_sender/include/: common_lib.h
02mapping/catkin_ws/src/data_sender/include/data_listener2/: cloud_recv_ros2_bridge.h
02mapping/catkin_ws/src/data_sender/launch/: cloud.launch  mock_pcl.launch  mock_pose2d.launch  sender.launch
02mapping/catkin_ws/src/data_sender/msg/: multi_lidar.msg
02mapping/catkin_ws/src/data_sender/scripts/: cloud_pointcloud_viewer_state.py  cloud_pointcloud_web_viewer.py  test_pcl.py  test_pose2d.py
02mapping/catkin_ws/src/data_sender/src/: cloud_recv.cpp  cloud_recv_ros2_bridge.cpp  data_sender.cpp  fastlio_http_sender.cpp  testpcl.cpp
02mapping/catkin_ws/src/data_sender/test/: test_cloud_pointcloud_viewer_html.py  test_cloud_pointcloud_viewer_state.py  test_cloud_recv_ros2_bridge.cpp
02mapping/catkin_ws/src/data_sender/web/: cloud_pointcloud_viewer.html
02mapping/ros2_ws/src/data_sender_ros2/: package.xml  setup.cfg  setup.py
02mapping/ros2_ws/src/data_sender_ros2/data_sender_ros2/: __init__.py  autodrive_bridge.py  cgi410_raw_imu_bridge_node.py  cgi410_serial_bridge_node.py  gps_imu_bridge_node.py  gps_pose_bridge_node.py  mock_cloud_server.py  payload_builder.py  sender_node.py  topic_config.py
02mapping/ros2_ws/src/data_sender_ros2/launch/: autodrive_bridges.launch.py  sender.launch.py
02mapping/ros2_ws/src/data_sender_ros2/resource/: data_sender_ros2
02mapping/ros2_ws/src/data_sender_ros2/tests/: test_autodrive_bridge.py  test_cgi410_raw_imu_bridge.py  test_cgi410_raw_imu_entrypoint.py  test_cgi410_serial_bridge.py  test_payload_builder.py  test_topic_config.py
config/shared/: vehicle_hosts.env
scripts/autodrive/: deploy_dual_vehicle_autodrive.sh  deploy_triple_vehicle_autodrive.sh  deploy_vehicle_autodrive.sh  start_vehicle_autodrive.sh  stop_vehicle_autodrive.sh
scripts/mapping/: deploy_vehicle_mapping.sh  prepare_vehicle_mapping_runtime.sh  start_k3s_master_cloud_stack.sh  start_vehicle1_mapping.sh  start_vehicle2_mapping.sh  verify_vehicle1_mapping.sh  verify_vehicle2_mapping.sh
scripts/shared/: build_vehicle_autodrive_images.sh  build_vehicle_mapping_images.sh  build_vehicle_orchestration_images.sh  cleanup_vehicle_orchestration.sh  transfer_vehicle_autodrive_images.sh  transfer_vehicle_mapping_images.sh  transfer_vehicle_orchestration_images.sh  vehicle_inventory.sh
tests/: test_autodrive_unification.py  test_image_split_scripts.py  test_vehicle_naming_migration.py
(+293 files in other folders)
