<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>position</name>  <!-- 功能包名 -->
  <version>0.0.0</version>
  <description>ROS2 package for position data collection</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 依赖项 -->
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>car_interfaces</depend>  <!-- 你的消息接口包 -->

  <exec_depend>python3-pandas</exec_depend>  <!-- 依赖pandas -->
  <exec_depend>python3-openpyxl</exec_depend>  <!-- pandas写Excel需要 -->

  <build_depend>ament_cmake</build_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>