<?xml version="1.0"?>
<package format="3">
  <name>data_sender_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 sender for RoboSense point clouds.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>car_interfaces</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
